# xattrprogs

./: ChangeLog  Makefile.am  README  autogen.sh  configure.ac  getxattr.c  listxattr.c  removexattr.c  setxattr.c
